RESOLVED FIXED198390
Some WeakPtr cleanup
https://bugs.webkit.org/show_bug.cgi?id=198390
Summary Some WeakPtr cleanup
Geoffrey Garen
Reported 2019-05-30 15:16:25 PDT
Some WeakPtr cleanup
Attachments
Patch (18.98 KB, patch)
2019-05-30 15:56 PDT, Geoffrey Garen
no flags
Archive of layout-test-results from ews125 for ios-simulator-wk2 (2.50 MB, application/zip)
2019-05-30 21:30 PDT, EWS Watchlist
no flags
Geoffrey Garen
Comment 1 2019-05-30 15:56:32 PDT
EWS Watchlist
Comment 2 2019-05-30 15:58:55 PDT
Attachment 370988 [details] did not pass style-queue: ERROR: Source/WTF/wtf/WeakPtr.h:102: Should be indented on a separate line, with the colon or comma first on that line. [whitespace/indent] [4] Total errors found: 1 in 8 files If any of these errors are false positives, please file a bug against check-webkit-style.
EWS Watchlist
Comment 3 2019-05-30 21:30:29 PDT
Comment on attachment 370988 [details] Patch Attachment 370988 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: https://webkit-queues.webkit.org/results/12335269 New failing tests: http/wpt/service-workers/service-worker-networkprocess-crash.html
EWS Watchlist
Comment 4 2019-05-30 21:30:31 PDT
Created attachment 371031 [details] Archive of layout-test-results from ews125 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews125 Port: ios-simulator-wk2 Platform: Mac OS X 10.14.5
Geoffrey Garen
Comment 5 2019-05-31 09:34:45 PDT
Comment on attachment 370988 [details] Patch EWS iOS-sim seems unrelated.
Chris Dumez
Comment 6 2019-05-31 09:36:45 PDT
Comment on attachment 370988 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=370988&action=review > Source/WebCore/Modules/indexeddb/shared/InProcessIDBServer.h:57 > + typedef IDBClient::IDBConnectionToServerDelegate::WeakValueType WeakValueType; I think we like using statements better than typedef nowadays.
Geoffrey Garen
Comment 7 2019-05-31 09:41:08 PDT
> > Source/WebCore/Modules/indexeddb/shared/InProcessIDBServer.h:57 > > + typedef IDBClient::IDBConnectionToServerDelegate::WeakValueType WeakValueType; > > I think we like using statements better than typedef nowadays. I agree. Unfortunately, in this case, our Windows and Linux compilers can't seem to handle a using statement. (See EWS failures in https://bugs.webkit.org/show_bug.cgi?id=188799, like https://webkit-queues.webkit.org/results/12311701 and https://webkit-queues.webkit.org/results/12310577.)
Geoffrey Garen
Comment 8 2019-05-31 09:41:28 PDT
Comment on attachment 370988 [details] Patch cq+
Chris Dumez
Comment 9 2019-05-31 09:49:17 PDT
Comment on attachment 370988 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=370988&action=review >> Source/WebCore/Modules/indexeddb/shared/InProcessIDBServer.h:57 >> + typedef IDBClient::IDBConnectionToServerDelegate::WeakValueType WeakValueType; > > I think we like using statements better than typedef nowadays. I meant: using WeakValueType = IDBClient::IDBConnectionToServerDelegate::WeakValueType;
WebKit Commit Bot
Comment 10 2019-05-31 10:12:05 PDT
Comment on attachment 370988 [details] Patch Clearing flags on attachment: 370988 Committed r245972: <https://trac.webkit.org/changeset/245972>
WebKit Commit Bot
Comment 11 2019-05-31 10:12:06 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 12 2019-05-31 10:13:26 PDT
Geoffrey Garen
Comment 13 2019-05-31 13:19:08 PDT
> I meant: > using WeakValueType = > IDBClient::IDBConnectionToServerDelegate::WeakValueType; Got it. I'll do this in https://bugs.webkit.org/show_bug.cgi?id=198431.
Note You need to log in before you can comment on or make changes to this bug.