Source/WTF/wtf/WeakHashSet.h
@@ -32,9 +32,9 @@
 
 namespace WTF {
 
-template<> struct HashTraits<Ref<WeakReference>> : RefHashTraits<WeakReference> {
+template<> struct HashTraits<Ref<WeakPtrImpl>> : RefHashTraits<WeakPtrImpl> {
     static const bool hasIsReleasedWeakValueFunction = true;
-    static bool isReleasedWeakValue(const Ref<WeakReference>& value)
+    static bool isReleasedWeakValue(const Ref<WeakPtrImpl>& value)
     {
         return !value.isHashTableDeletedValue() && !value.isHashTableEmptyValue() && !value.get();
     }
@@ -43,18 +43,18 @@ template<> struct HashTraits<Ref<WeakReference>> : RefHashTraits<WeakReference> 
 template <typename T>
 class WeakHashSet {
 public:
-    typedef HashSet<Ref<WeakReference>> WeakReferenceSet;
+    typedef HashSet<Ref<WeakPtrImpl>> WeakPtrImplSet;
 
     class WeakHashSetConstIterator : public std::iterator<std::forward_iterator_tag, T, std::ptrdiff_t, const T*, const T&> {
     private:
-        WeakHashSetConstIterator(const WeakReferenceSet& set, typename WeakReferenceSet::const_iterator position)
+        WeakHashSetConstIterator(const WeakPtrImplSet& set, typename WeakPtrImplSet::const_iterator position)
             : m_position(position), m_endPosition(set.end())
         {
             skipEmptyBuckets();
         }
 
     public:
-        T* get() const { return m_position->get().template get<T, typename T::WeakValueType>(); }
+        T* get() const { return static_cast<T*>((*m_position)->template get<T>()); }
         T& operator*() const { return *get(); }
         T* operator->() const { return get(); }
 
@@ -85,8 +85,8 @@ public:
     private:
         template <typename> friend class WeakHashSet;
 
-        typename WeakReferenceSet::const_iterator m_position;
-        typename WeakReferenceSet::const_iterator m_endPosition;
+        typename WeakPtrImplSet::const_iterator m_position;
+        typename WeakPtrImplSet::const_iterator m_endPosition;
     };
     typedef WeakHashSetConstIterator const_iterator;
 
@@ -98,25 +98,25 @@ public:
     template <typename U>
     void add(const U& value)
     {
-        m_set.add(*makeWeakPtr<T>(const_cast<U&>(value)).m_ref);
+        m_set.add(*makeWeakPtr<T>(const_cast<U&>(value)).m_impl);
     }
 
     template <typename U>
     bool remove(const U& value)
     {
-        auto& weakReference = value.weakPtrFactory().m_ref;
-        if (!weakReference || !*weakReference)
+        auto& weakPtrImpl = value.weakPtrFactory().m_impl;
+        if (!weakPtrImpl || !*weakPtrImpl)
             return false;
-        return m_set.remove(*weakReference);
+        return m_set.remove(*weakPtrImpl);
     }
 
     template <typename U>
     bool contains(const U& value) const
     {
-        auto& weakReference = value.weakPtrFactory().m_ref;
-        if (!weakReference || !*weakReference)
+        auto& weakPtrImpl = value.weakPtrFactory().m_impl;
+        if (!weakPtrImpl || !*weakPtrImpl)
             return false;
-        return m_set.contains(*weakReference);
+        return m_set.contains(*weakPtrImpl);
     }
 
     unsigned capacity() const { return m_set.capacity(); }
@@ -130,7 +130,7 @@ public:
 
     unsigned computeSize() const
     {
-        const_cast<WeakReferenceSet&>(m_set).removeIf([] (auto& value) { return !value.get(); });
+        const_cast<WeakPtrImplSet&>(m_set).removeIf([] (auto& value) { return !value.get(); });
         return m_set.size();
     }
 
@@ -141,7 +141,7 @@ public:
 #endif
 
 private:
-    WeakReferenceSet m_set;
+    WeakPtrImplSet m_set;
 };
 
 } // namespace WTF
